tests/rosetta/out/C/carmichael-3-strong-pseudoprimes.error
cc: exit status 1
/tmp/carmichael-3-strong-pseudoprimes.c: In function ‘carmichael’:
/tmp/carmichael-3-strong-pseudoprimes.c:69:23: error: invalid operands to binary % (have ‘double’ and ‘int’)
   69 |         if ((p2 * p3) % (p1 - 1) != 1) {
      |             ~~~~~~~~~ ^ ~~~~~~~~
      |                 |           |
      |                 double      int
/tmp/carmichael-3-strong-pseudoprimes.c:75:35: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   75 |         printf("%d\n", pad(p1, 2) + "   " + pad(p2, 4) + "   " + pad(p3, 5) +
      |                        ~~~~~~~~~~ ^
      |                        |          |
      |                        char *     char *
