tests/rosetta/out/C/carmichael-3-strong-pseudoprimes.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:03Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:03Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int mod(int n, int m) { return ((n % m) + m) % m; }

int isPrime(int n) {
  if (n < 2) {
    return 0;
  }
  if (n % 2 == 0) {
    return n == 2;
  }
  if (n % 3 == 0) {
    return n == 3;
  }
  int d = 5;
  while (d * d <= n) {
    if (n % d == 0) {
      return 0;
    }
    d = d + 2;
    if (n % d == 0) {
      return 0;
    }
    d = d + 4;
  }
  return 1;
}

char *pad(int n, int width) {
  char *tmp1 = _str(n);
  char *s = tmp1;
  while (strlen(s) < width) {
    char *tmp2 = concat_string(" ", s);
    s = tmp2;
  }
  return s;
}

int carmichael(int p1) {
  for (int h3 = 2; h3 < p1; h3++) {
    for (int d = 1; d < (h3 + p1); d++) {
      if (((h3 + p1) * (p1 - 1)) % d == 0 && mod((-p1) * p1, h3) == d % h3) {
        double p2 = 1 + (((double)(p1 - 1) * (h3 + p1)) / ((double)d));
        if (((!isPrime(p2)))) {
          continue;
        }
        double p3 = 1 + (p1 * p2 / h3);
        if (((!isPrime(p3)))) {
          continue;
        }
        if ((p2 * p3) % (p1 - 1) != 1) {
          continue;
        }
        double c = p1 * p2 * p3;
        char *tmp3 = _str(c);
        char *tmp4 = _str(c);
        printf("%d\n", pad(p1, 2) + "   " + pad(p2, 4) + "   " + pad(p3, 5) +
                           "     " + tmp4);
      }
    }
  }
}

int _mochi_main() {
  printf("The following are Carmichael munbers for p1 <= 61:\\n\n");
  printf("p1     p2      p3     product\n");
  printf("==     ==      ==     =======\n");
  for (int p1 = 2; p1 < 62; p1++) {
    if (isPrime(p1)) {
      carmichael(p1);
    }
  }
  return 0;
}
int main() { return _mochi_main(); }
